# plib

./: .gitignore  CMakeLists.txt  CMakeLists_template.txt  CMakePresets.json  COMPILATION_OPTIONS.md  LICENSE  MODULE_BUILD_GUIDE.md  PROJECT_STRUCTURE.md  README.md  compare_dumps.bat  conanfile.txt  readme.md
benchmarks/: CMakeLists.txt  benchmark_main.cpp  thread_pool_benchmark.cpp
benchmarks/comparison/: Comparison_threadpool.hpp  README.md
doc/: core.md
examples/: CMakeLists.txt  cache_line_test.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/config/conf/: conf.cpp  conf.hpp
src/core/config/yaml/: yaml.cpp  yaml.hpp
src/core/include/: plib_macros.hpp  sigslot.hpp  type_traits.hpp  typedef.hpp
src/core/include/cache/: lru.hpp
src/core/include/concurrent/: rwlock.hpp  spinlock.hpp  thread.hpp  threadpool.hpp
src/core/include/config/conf/: conf.hpp
src/core/include/config/yaml/: yaml.hpp
src/core/include/crashreport/: crash_report.hpp  crash_report_writer.hpp
src/core/include/log/: config.hpp  log.hpp  logger.hpp  manager.hpp
src/core/include/memory/: memorypool.hpp
src/core/include/reflection/: reflection.hpp
src/core/include/time/: timezone.hpp
src/core/include/type/: bignum.hpp  flags.hpp  flatmap.hpp  flatset.hpp  move_only_function.hpp  noncopyable.hpp  orderedset.hpp  required.hpp  scope.hpp  single_instance.hpp  singleton.hpp  stringstream.hpp  threadsafe_queue.hpp
src/core/include/utils/: common_util.hpp  cpu_affinity.hpp  file_lock.hpp  file_utils.hpp  library_util.hpp  lru.hpp  object_pool.hpp  os_util.hpp  path_util.hpp  platform_info.hpp  safe_memorypool.hpp  small_vector.hpp  string_util.hpp  thread_pool.hpp  time_util.hpp  yaml_json.hpp  zlib_helper.hpp
src/core/log/: common.h  ilogger.h  log.h
src/core/log/inc/: manager.h
src/core/log/privateinc/log/: ivyLogger.h  spdLogger.h  util.h
src/core/log/privateinc/log/ivyconsole/: fileObserver.h  ivyconsole.h  ivyconsole.inl  ivylogConfig.h  observer.h  stdObserver.h
src/core/log/src/log/: ivyLogger.cpp  manager.cpp  spdLogger.cpp  util.cpp
src/core/log/src/log/ivyconsole/: fileObserver.cpp  ivyconsole.cpp  stdObserver.cpp
src/core/src/config/conf/: conf.cpp
src/core/src/config/yaml/: yaml.cpp
src/core/src/crashreport/: crash_report_writer.cpp
src/core/src/log/: logger.cpp  manager.cpp
src/core/src/utils/: common_util.cpp  file_lock.cpp  library_util.cpp  os_util.cpp  path_util.cpp  time_util.cpp  yaml_json.cpp
src/core/utils/: string_util.hpp
src/framework/: CMakeLists.txt
src/framework/include/cache/: cache_types.hpp
test/: CMakeLists.txt  file_lock_testfile.txt  lib_cur_test.cpp  simple.yaml  test.conf  test.ini  test.json  test.yaml
test/core/: bignum_test.cpp  core_test.cpp  crash_report_test.cpp  file_lock_test.cpp  os_util_test.cpp  reflection_test.cpp  threadpool_test.cpp  type_traits_test.cpp  utils_test.cpp  zlib_helper_test.cpp
test/other/: config_thirdparty_test.cpp  simd_json_test.cpp
unittest/: CMakeLists.txt  core_test.cpp
unittest/core/: core_test.cpp  threadpool_test.cpp
